--- a/WebApiTest/WebApiTest.csproj
+++ b/WebApiTest/WebApiTest.csproj
@@ -104,6 +104,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
+    <Content Include="HtmlPage1.html" />
     <Content Include="UIPage.html" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -111,6 +112,7 @@
     <Compile Include="App_Start\CustomJsonFormatter.cs" />
     <Compile Include="App_Start\SwaggerConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="BasicAuthenticationAttribute.cs" />
     <Compile Include="Controllers\EmployeesController.cs" />
     <Compile Include="Controllers\StudentController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
